Office/C8.7K8Ingress.yaml

# Source: camunda-platform/templates/camunda/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-camunda-platform
  labels:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    helm.sh/chart: camunda-platform-11.1.0
  annotations: 
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: camunda-stage.txninfra.com
      http:
        paths:
          - backend:
              service:
                name: camunda-keycloak
                port:
                  number: 80
            path: /auth/
            pathType: Prefix
          - backend:
              service:
                name: camunda-identity
                port:
                  number: 80
            path: /identity
            pathType: Prefix
          - backend:
              service:
                name: camunda-operate
                port:
                  number: 80
            path: /operate
            pathType: Prefix
          - backend:
              service:
                name: camunda-optimize
                port:
                  number: 80
            path: /optimize
            pathType: Prefix
          - backend:
              service:
                name: camunda-tasklist
                port:
                  number: 80
            path: /tasklist
            pathType: Prefix
          - backend:
              service:
                name: camunda-connectors
                port:
                  number: 8080
            path: /connectors
            pathType: Prefix
          - backend:
              service:
                name: camunda-zeebe-gateway
                port:
                  number: 8080
            path: /zeebe
            pathType: Prefix
          - backend:
              service:
                name: camunda-elasticsearch
                port:
                  number: 9200
            path: /
            pathType: Prefix
